working after PP 10

--- a/SportsStore/SportsStore.WebUI/Views/Shared/_Layout.cshtml
+++ b/SportsStore/SportsStore.WebUI/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     @*Nav bar - displays 'SPORTS STORE' title*@
     <div class="navbar navbar-inverse" role="navigation">
         <a class="navbar-brand" href="#">SPORTS STORE</a>
+        @Html.Action("Summary", "Cart")
     </div>
 
     <div class="row panel">
