--- a/SportsStore/SportsStore.WebUI/Views/Cart/Index.cshtml
+++ b/SportsStore/SportsStore.WebUI/Views/Cart/Index.cshtml
@@ -57,4 +57,6 @@
     <a class="btn btn-primary" href="@Model.ReturnUrl">
         Continue Shopping
     </a>
+    @Html.ActionLink("Checkout now", "Checkout", null,
+                    new { @class = "btn btn-primary"})
 </div>
